src/tess/tl/test/pass/test_receiver_block_empty.tl
// Receiver block with no parameters

#module main

(): {

    fixed() { 42 }

}

main() {
    fixed() - 42
}
