src/tess/tl/test/fail/test_fail_discard_in_defer.tl
#module main

make_result() -> Result[Int, Int] {
    Ok(42)
}

main() {
    defer {
        make_result()  // discarded Result inside defer block — must fail
        0
    }
    0
}
